<resources>
    <string name="app_name">Incognito</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">Incognito</string>
    <string name="discount">Discount: %1$s %%</string>
    <string name="guests">Guests</string>
    <string name="cocktails">Cocktails</string>
    <string name="ingredients">Ingredients</string>
    <string name="glass">Glass</string>
    <string name="technique">Technique</string>
    <string name="add_cocktail">Add cocktail</string>
    <string name="cancel">Cancel</string>
    <string name="add_guest_button">Add guest</string>
    <string name="garnish">Garnish</string>
    <string name="menu">Menu</string>
    <string name="category">Category</string>
    <string name="signature">Signature</string>
    <string name="InternetError">Cannot resolve host, check your network connection</string>
    <string name="search_hint">Search by name or base alcohol</string>
</resources>
