<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.koktajlbar.incognitobook.viewModel.CocktailViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:collapsedTitleTextAppearance="@style/AppTheme.CollapsingToolbarLayout"
                app:expandedTitleTextAppearance="@style/AppTheme.CollapsingToolbarLayout"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="TODO"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/placeholder" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/material_component_dialogs_padding_around_content_area">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:visibility="@{View.GONE}"
                    app:autoPlay="false"
                    app:showFullScreenButton="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsCategoryLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline5"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsCategory"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsGlasswareLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline5"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/glass" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsGlassware"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsIngredientsLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline5"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsIngredients"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsGarnishLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/garnish" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsGarnish"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsTechniqueLabel"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technique" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cocktailDetailsTechnique"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>